Update github action version tag regex.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,7 +6,7 @@ name: Go Build and Release
 on:
   push:
     tags:
-      -v 'v*' # Trigger on version tags (eg v1.2.0).
+      -v 'v[0-9]+.[0-9]+.[0-9]+' # Trigger on version tags (eg v1.2.0).
 
 jobs:
   build:
