--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,39 +16,42 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
+    - name: Debug
+      run: echo "Push it real good (${GITHUB_REF})!"
 
-    - name: Cache Go modules
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/go-build
-        key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-mod-
-
-    - name: Install dependencies
-      run: go mod tidy
-
-    - name: Build binary for linux
-      run: GOOS=linux GOARCH=amd64 go build -v -o sel ./...
-
-    - name: Create release
-      id: create_release
-      uses: gh actions/create-release@v1
-      with:
-        tag_name: ${{ github.ref }}
-        release_name: Release ${{ github.ref }}
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-    - name: Upload binary to release
-      uses: gh actions/upload-artifact@v2
-      with:
-        name: sel
-        path: sel
+      #    - name: Set up Go
+      #      uses: actions/setup-go@v4
+      #      with:
+      #        go-version: '1.20'
+      #
+      #    - name: Cache Go modules
+      #      uses: actions/cache@v4
+      #      with:
+      #        path: ~/.cache/go-build
+      #        key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
+      #        restore-keys: |
+      #          ${{ runner.os }}-go-mod-
+      #
+      #    - name: Install dependencies
+      #      run: go mod tidy
+      #
+      #    - name: Build binary for linux
+      #      run: GOOS=linux GOARCH=amd64 go build -v -o sel ./...
+      #
+      #    - name: Create release
+      #      id: create_release
+      #      uses: gh actions/create-release@v1
+      #      with:
+      #        tag_name: ${{ github.ref }}
+      #        release_name: Release ${{ github.ref }}
+      #        draft: false
+      #        prerelease: false
+      #      env:
+      #        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #
+      #    - name: Upload binary to release
+      #      uses: gh actions/upload-artifact@v2
+      #      with:
+      #        name: sel
+      #        path: sel
 
