--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -41,7 +41,7 @@ jobs:
 
     - name: Create release
       id: create_release
-      uses: gh actions/create-release@v1
+      uses: actions/create-release@v1
       with:
         tag_name: ${{ github.ref }}
         release_name: Release ${{ github.ref }}
@@ -51,7 +51,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Upload binary to release
-      uses: gh actions/upload-artifact@v2
+      uses: actions/upload-artifact@v2
       with:
         name: sel
         path: sel
