--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,9 +5,8 @@ name: Go Build and Release
 
 on:
   push:
-    branches: [ main ]
     tags:
-      -v 'v[0-9]+.[0-9]+.[0-9]+' # Trigger on version tags (eg v1.2.0).
+      - 'v[0-9]+.[0-9]+.[0-9]+' # Trigger on version tags (eg v1.2.0).
 
 permissions:
   contents: write # Allow pushing tags and creating releases.
