--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,13 +24,14 @@ jobs:
       with:
         go-version: '1.20'
 
-    - name: Cache Go modules
-      uses: actions/cache@v4
-      with:
-        path: ~/.cache/go-build
-        key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-mod-
+      #    TODO: implement.
+      #    - name: Cache Go modules
+      #      uses: actions/cache@v4
+      #      with:
+      #        path: ~/.cache/go-build
+      #        key: ${{ runner.os }}-go-mod-${{ hashFiles('**/go.sum') }}
+      #        restore-keys: |
+      #          ${{ runner.os }}-go-mod-
 
     - name: Install dependencies
       run: go mod tidy
