--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         go-version: [1.18.x, 1.19.x, 1.20.x]
-        platform: [ubuntu-latest, macos-latest, windows-lastest]
+        platform: [ubuntu-latest, macos-latest]
     runs-on: ${{ matrix.platform }}
 
     steps:
