--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,15 +40,11 @@ jobs:
       run: GOOS=linux GOARCH=amd64 go build -v -o sel ./...
 
     - name: Create release
-      id: create_release
-      uses: actions/create-release@v2
-      with:
-        tag_name: ${{ github.ref_name }}
-        release_name: Release ${{ github.ref_name }}
-        draft: false
-        prerelease: false
+      uses: elgohr/Github-Release-Action@v5
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      with:
+        title: MyReleaseMessage
 
     - name: Upload binary to release
       uses: actions/upload-artifact@v3
