--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -44,7 +44,7 @@ jobs:
       env:
         GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        title: MyReleaseMessage
+        title: Release ${{ github.ref_name }}
 
     - name: Upload binary to release
       uses: actions/upload-artifact@v3
