--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,7 @@ jobs:
     - name: Build binary for linux
       run: GOOS=linux GOARCH=amd64 go build -v -o sel ./...
 
+    # see: https://github.com/elgohr/Github-Release-Action
     - name: Create release
       uses: elgohr/Github-Release-Action@v5
       env:
