--- a/.github/workflows/goreleaser.yml
+++ b/.github/workflows/goreleaser.yml
@@ -4,6 +4,7 @@ on:
   push:
     tags:
       - 'v[0-9]+.[0-9]+.[0-9]+' # Trigger on version tags, aka. semver (eg v1.2.0).
+  workflow_dispatch: # Allow manual triggering via the GitHub UI.
 
 permissions:
   contents: write
